terraform-aws/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchtower
  namespace: default
  labels:
    app: watchtower
spec:
  replicas: 2

  selector:
    matchLabels:
      app: watchtower

  template:
    metadata:
      labels:
        app: watchtower

    spec:
      serviceAccountName: watchtower-sa
      containers:
        - name: watchtower
          image: 405804178912.dkr.ecr.us-east-1.amazonaws.com/watchtower:5da33ae0b99faf8de1adc8556ed0ab80f6f3567a

          ports:
            - containerPort: 5000
              protocol: TCP

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"

            limits:
              cpu: "250m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20

      restartPolicy: Always
