terraform-aws/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: watchtower
  namespace: default
  labels:
    app: watchtower

spec:
  type: ClusterIP

  selector:
    app: watchtower

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
